fix align-items of track details

--- a/src/components/UpdateForm.css
+++ b/src/components/UpdateForm.css
@@ -2,7 +2,6 @@
   width: 300px;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   margin-right: 20px;
 }
 
